[gd_scene load_steps=10 format=2]

[ext_resource path="res://title_screen/src/Sprite-0001-logo.png" type="Texture" id=1]
[ext_resource path="res://title_screen/buttons/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://title_screen/buttons/OptionsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/buttons/ContinueButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/src/science_032_1.png" type="Texture" id=5]
[ext_resource path="res://fade_in/Fadein.tscn" type="PackedScene" id=6]
[ext_resource path="res://title_screen/fonts/dungunmo_48.tres" type="DynamicFont" id=7]
[ext_resource path="res://title_screen/title_screen.gd" type="Script" id=8]
[ext_resource path="res://bgm/002 Title Screen.mp3" type="AudioStream" id=9]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 72.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 76.0
margin_right = 1040.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 156.0
margin_right = 518.0
margin_bottom = 216.0
rect_min_size = Vector2( 360, 60 )
scene_to_load = "res://title_screen/NewGame.tscn"

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 220.0
margin_right = 518.0
margin_bottom = 280.0
rect_min_size = Vector2( 360, 60 )
scene_to_load = "res://stage_select/StageSelect.tscn"

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 284.0
margin_right = 518.0
margin_bottom = 344.0
rect_min_size = Vector2( 360, 60 )
scene_to_load = "res://options_screen/Options_title.tscn"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 500.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 9.0
margin_right = 509.0
margin_bottom = 500.0
texture = ExtResource( 5 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 580.0
margin_right = 1040.0
margin_bottom = 628.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Version 0.1.0, GGwarrior Studio"

[node name="Fadein" parent="." instance=ExtResource( 6 )]
visible = false
color = Color( 1, 1, 1, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="fade_finished" from="Fadein" to="." method="_on_Fadein_fade_finished"]
